# GacUI

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  Project.md  README.md  TODO.md  TODO_Task.md  TODO_Task_Log_1.md  TODO_Task_Log_2.md  TODO_Task_Log_3.md  TODO_Task_Log_4.md  TODO_Task_Log_5.md  TODO_Task_Log_6.md  TODO_Task_Log_7.md
.github/: Project.md  bot.ps1  copilot-instructions.md
.github/Agent/: .gitignore  CopilotTools.md  README.md  package.json  tsconfig.json
.github/Experiment/: .gitignore  Workflow.md  WorkflowDriver.ps1
.github/Guidelines/: Building.md  Coding.md  (+8 more)
Deprecated/: TextBoxReflection.txt
Document/: BuildDocument.bat  BuildDocumentForSinglePlatform.bat  Clang.bat  Headers.h  ParseCppHeader.bat  UpdateSourceCode.bat
Import/: CMakeLists.txt  Import.bat  Vlpp.Linux.cpp  Vlpp.Windows.cpp  Vlpp.cpp  Vlpp.h  VlppGlrParser.cpp  VlppGlrParser.h  VlppGlrParserCompiler.cpp  VlppGlrParserCompiler.h  VlppOS.Linux.cpp  VlppOS.Linux.h  VlppOS.Windows.cpp  VlppOS.Windows.h  VlppOS.cpp  VlppOS.h  VlppParser.cpp  VlppParser.h  VlppReflection.cpp  VlppReflection.h  VlppRegex.cpp  VlppRegex.h  VlppWorkflow.cpp  VlppWorkflow.h  VlppWorkflowCompiler.cpp  VlppWorkflowCompiler.h  VlppWorkflowLibrary.cpp  VlppWorkflowLibrary.h  VlppWorkflowRuntime.cpp  VlppWorkflowRuntime.h
Release/: CodegenConfig.xml  DarkSkin.cpp  DarkSkin.h  DarkSkinReflection.cpp  DarkSkinReflection.h  GacUI.UnitTest.UI.cpp  GacUI.UnitTest.UI.h  GacUI.UnitTest.UIReflection.cpp  GacUI.UnitTest.UIReflection.h  GacUI.UnitTest.cpp  GacUI.UnitTest.h  GacUI.Windows.cpp  GacUI.Windows.h  GacUI.cpp  GacUI.h  GacUICompiler.cpp  GacUICompiler.h  GacUIReflection.cpp  GacUIReflection.h  GacUIWindows.cpp  GacUIWindows.h  Release.bat
Source/: GacUI.h  GacUIReflectionHelper.cpp  GacUIReflectionHelper.h  GacVlppReferences.h  GacWorkflowReferences.h  GuiTypes.h  makefile.gacui.makegen
ToDo/: 1.2.11.0.md  1.2.11.1.md  1.2.12.0.md  1.2.13.0.md  1.3.0.0.md  1.3.1.0.md  1.3.1.1.md  1.3.2.0.md  1.3.3.0.md  1.4.0.0.md  1.4.0.1.md  1.4.1.0.md  1.4.2.0.md  1.5.0.0.md  1.6.0.0.md  CheckLinks.1.6.0.0.ps1  CheckLinks.ps1  KnownIssues.md  Task_TUI.md  Task_UIA.md  Unplanned.md
Tools/: BuildTools.bat
Tools/GacGen/: CMakeLists.txt  GacGen.sln  Metadata.txt  makefile  vmake  vmake.txt
Tools/GacGen/GacGen/: CodegenControlClass.cpp  CodegenControlClassContent.cpp  CodegenEventHandlers.cpp  CodegenGlobalHeader.cpp  CodegenPartialClass.cpp  CodegenUtility.cpp  GacGen.cpp  GacGen.h  GacGen.vcxproj  GacGen.vcxproj.filters  GacGenObjectModel.cpp  GacGenSearch.cpp  GacGenTypeTransformation.cpp  GacGenUtility.cpp  Main.cpp  NativeController.cpp
(+6854 files in other folders)
